[fix] - remove overflow for fix horizontal scroll

--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -71,3 +71,7 @@ textarea {
   overflow-y: scroll;
   scrollbar-color: #007;
 }
+
+app-base-navbar {
+  width: 100%;
+}
